<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!--  General string -->
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>

  <!-- Activity HomeActivity -->
  <string name="new_list">New</string>
  <string name="import_list">Import</string>
  <string name="template_list">Template</string>
  <string name="edit_title">Edit title</string>
  <string name="select_template">Select template</string>
  <string name="title">title</string>
  <string name="delete_checklists">Delete selected checklists?</string>
  <string name="backup">Backup</string>
  <string name="backup_successful">Backup to</string>
  <string name="no_backup_dir">Backup dir not exist.</string>
  <string name="no_backup_files">No backup files.</string>
  <string name="restore">Restore</string>
  <string name="restore_checklists">Restore from the selected file?</string>
  <string name="restore_successful">Restoration is successful.</string>
  <string name="export">Export</string>

  <!--  Activity CheckActivity -->
  <string name="about">About</string>
  <string name="add">Add</string>
  <string name="add_entry_hint">Type item to add</string>
  <string name="app_name">CheckIt</string>
  <string name="delete">Delete</string>
  <string name="delete_message">Delete selected items?</string>
  <string name="edit">Edit</string>
  <string name="copy">Copy</string>
  <string name="paste">Paste</string>  
  <string name="help">Help</string>	
  <string name="item_selected_prefix"></string>
  <string name="item_selected_postfix">\u0020selected</string>
  <string name="settings">Settings</string>
  <string name="uncheck">Uncheck</string>
  <string name="uncheck_all">Uncheck All</string>
  <string name="uncheck_message">Uncheck all items?</string>

  <!-- Class ExternalStorage.java -->
  <string name="sd_not_writable">SD card not mounted/writable.</string>
  <string name="sd_not_mounted">SD card not mounted.</string>

  <array name="template_list">
    <item>travel</item>
  </array>
  <array name="travel_list">
    <item>backup glasses</item>
    <item>comb</item>
    <item>toothpaste</item>
    <item>toothbrush</item>
    <item>slippers</item>
    <item>passport</item>
    <item>airline ticket</item>
    <item>data cable</item>
    <item>towel</item>
    <item>umbrella</item>
    <item>travel adapter</item>
    <item>medicine</item>
    <item>book</item>
  </array>
  
  <!--  Activity Settings -->
  <string name="appearance_preference">Appearance</string>
  <string name="theme_title_preference">Theme</string>
  <string name="theme_summary_preference">Theme</string>
  <string name="theme_dialog_title_preference">Theme</string>
  <array name="theme_entries_preference">
    <item>Light</item>
    <item>Dark</item>
  </array>
  <string-array name="theme_values_preference">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string name="text_size_title_preference">Text size</string>
  <string name="text_size_summary_preference">Text size</string>
  <string name="text_size_dialog_title_preference">Text size</string>
  <array name="text_size_entries_preference">
    <item>Medium</item>
    <item>Large</item>
    <item>Huge</item>
  </array>
  <string-array name="text_size_values_preference">
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
  <string name="auto_backup_preference">Auto backup to Dropbox</string>
  <string name="summary_off_auto_backup_preference">
    Enable automatic backup to Dropbox
  </string>
  <string name="summary_on_auto_backup_preference">
    Disable automatic backup to Dropbox
  </string>    
  <string name="export_format_title_preference">Export format</string>
  <string name="export_format_summary_preference">Export format</string>
  <string name="export_format_dialog_title_preference">Export format</string>
  <array name="export_format_entries_preference">
    <item>Unix (LF)</item>
    <item>Windows (CR/LF)</item>
  </array>
  <string-array name="export_format_values_preference">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string name="auto_append_preference">Auto append suffix .txt for Windows format</string>
  <string name="summary_off_auto_append_preference">
    Enable automatic append suffix .txt
  </string>
  <string name="summary_on_auto_append_preference">
    Disable automatic append suffix .txt
  </string>    
  
  <!-- Activity About -->
  <string name="whats_new">What\'s new</string>
  <string name="changelog">Changelog</string>
  <string name="help_and_faq">Help &amp; FAQ</string>
  <string name="other_programs">Other programs</string>
  <string name="about_html">
    <![CDATA[
    <html>
      <body>
        <center><h3>CheckIt v0.1.1</h3></center>
        <center><h4>Copyright &copy; 2011-2012 Yujian Zhang</h4></center>
        <center><h4>License: <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License v2</a></h4></center>
      </body>
    </html>
    ]]>
  </string>
</resources>
