<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/add_switch"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom" 
        android:actionViewClass="android.widget.CheckBox" />
  <item android:id="@+id/copy"	
        android:title="@string/copy" 
        android:icon="@android:drawable/ic_menu_copy_holo_light" 
        android:showAsAction="ifRoom" />
  <item android:id="@+id/paste"	
        android:title="@string/paste" 
        android:icon="@android:drawable/ic_menu_paste_holo_light" 
        android:showAsAction="ifRoom" />
  <item android:id="@+id/uncheck_all"
        android:title="@string/uncheck_all"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom" />
  <item android:id="@+id/settings"
        android:title="@string/settings" 
        android:icon="@android:drawable/ic_menu_preferences" />
  <item android:id="@+id/about"
        android:title="@string/about" 
        android:icon="@android:drawable/ic_menu_info_details" />
</menu>
